--- a/LevelOne/pom.xml
+++ b/LevelOne/pom.xml
@@ -8,5 +8,12 @@
     <artifactId>LevelOne</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <project.encoding>UTF-8</project.encoding>
+        <project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>${project.encoding}</project.reporting.outputEncoding>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
 
 </project>
